--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "start": "node index.js",
     "dev": "nodemon index.js",
     "lint": "eslint .",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "deploy": "git push heroku master",
+    "deploy:full": "git add . && git commit -m uibuild && npm run deploy",
+    "logs:prod": "heroku logs --tail"
   },
   "keywords": [],
   "author": "",
